# ccform

./: .copier-answers.yml  .mise.toml  CHANGELOG.md  Cargo.toml  README.md
.github/formula-template/: ccform.rb
.github/workflows/: release-please.yml  test.yml
src/: cli.rs  command.rs  io.rs  lib.rs  main.rs  paths.rs  state.rs  target.rs  test_support.rs
src/cli/: render.rs
src/command/: import.rs  init.rs  plan.rs  show.rs
src/config/: loader.rs  lua.rs  lua_json.rs  merge.rs  mod.rs  serialize_lua.rs
src/io/: atomic.rs
src/state/: diff.rs  store.rs
tests/: cli.rs  import.rs  init.rs  plan.rs  show.rs
tests/common/: mod.rs
