[package]
name = "ccform"
version = "0.1.0"
edition = "2024"
description = "Terraform-style declarative manager for Claude Code settings via a Lua DSL"
license = "MIT"
repository = "https://github.com/fohte/ccform"
keywords = ["claude-code", "cli", "configuration", "lua"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "=1.0.103"
clap = { version = "=4.6.2", features = ["derive"] }
dialoguer = "=0.12.0"
mlua = { version = "=0.12.0", features = ["lua54", "vendored", "serde"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.150", features = ["preserve_order"] }
thiserror = "=2.0.18"
xdg = "=3.0.0"

[dev-dependencies]
indoc = "=2.0.7"
rstest = "=0.26.1"
tempfile = "=3.27.0"

[lints.clippy]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
disallowed_macros = "deny"
expect_used = "deny"
panic = "deny"
unwrap_used = "deny"
